<resources>
    <string name="app_name">Droid Café</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Deserts</string>
    <string name="description_donnut">Donnuts are glazed and sprinkled with candy.</string>
    <string name="description_ice_crem_sadwich">Ice cream sandwich have chocolate wafers and vanilla filling.</string>
    <string name="description_froyo">Froyo is a premium self-service frozen yogurt.</string>

    <string name="donnut_order_message">You ordered a Donnut.</string>
    <string name="icecream_order_message">You ordered a Ice Cream Sandwich.</string>
    <string name="froyo_order_message">You ordered a Froyo.</string>
    <string name="label_choose_delivery">Choose a delivery method:</string>
    <string name="radio_label_sameday">Same day messenger service.</string>
    <string name="radio_label_nextday">Next day ground delivery.</string>
    <string name="radio_label_pickup">Pick up.</string>
    <string name="action_contact">Contact</string>
    <string name="action_favorities">Favorities</string>
    <string name="action_add_car">Add to car</string>
    <string name="action_status">Status</string>
    <string name="resource_coord">geo:37.422114,-122.086744?z=12</string>
    <string name="title_order_activity">Order Activity</string>
</resources>
