<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lucasmarciano.droidcaf2.MainActivity">

    <item
        android:id="@+id/action_add_car"
        android:orderInCategory="10"
        android:title="@string/action_add_car"
        android:icon="@drawable/ic_add_car"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_status"
        android:icon="@drawable/ic_info"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_favorities"
        android:orderInCategory="40"
        android:icon="@drawable/ic_favorities"
        android:title="@string/action_favorities"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:icon="@drawable/ic_contact"
        android:title="@string/action_contact"
        app:showAsAction="ifRoom" />
</menu>
